--- a/themes/stun/package.json
+++ b/themes/stun/package.json
@@ -31,6 +31,7 @@
     "cz-customizable": "^6.3.0",
     "eslint": "^7.17.0",
     "husky": "^4.3.6",
+    "hexo-fs": "^4.1.1",
     "standard": "^14.3.4",
     "standard-version": "^9.1.0"
   },
