--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "hexo clean && hexo g && hexo deploy",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "serve": "hexo server"
   },
   "hexo": {
     "version": "6.3.0"
