feat: update readme

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ theme: stun
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@gitee.com:bestjarvan/bestjarvan.git
+  repo: git@github.com:BestJarvan/BestJarvan.git
   branch: dev
 
 # pwa
