--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://bestjarvan.gitee.io/
+url: https://jiangyh.cn
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -109,7 +109,7 @@ theme: stun
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:BestJarvan/BestJarvan.git
+  repo: git@github.com:BestJarvan/bestjarvan.github.io.git
   branch: dev
 
 # pwa
