--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -478,7 +478,7 @@ gitalk:
   # Github username.
   owner: BestJarvan
   # Github repository.
-  repo: BestJarvan
+  repo: bestjarvan.github.io
   # Github Application Client ID.
   client_id: 90a70ca67fe841a80b16
   # Github Application Client Secret.
