--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -30,7 +30,7 @@ bing_site_verification:
 
 # Baidu Webmaster tools verification setting
 # See: https://ziyuan.baidu.com/site/
-baidu_site_verification: code-6KBzuXZkij
+baidu_site_verification: codeva-IHIk9G7I2J
 
 # 360 Webmaster tools verification setting
 # see http://zhanzhang.so.com/
