--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -26,7 +26,7 @@ google_site_verification: 93yOnva0Pzj_jy82uPojg9NK61TB7cum8FlHkYDWvX4
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster/
-bing_site_verification:
+bing_site_verification: E990DB0CBECF200DD90F7EC1F2242CA6
 
 # Baidu Webmaster tools verification setting
 # See: https://ziyuan.baidu.com/site/
