--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -149,7 +149,7 @@ header:
     # In theme directory (source/images): /images/avatar.png
     # In site directory (source/uploads): /uploads/avatar.png
     # You can also use a link of image.
-    url: https://fastly.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202303221030367.jpeg
+    url: https://gcore.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202303221030367.jpeg
   # Mask effect of the background image.
   mask:
     enable: true
@@ -293,7 +293,7 @@ author:
     # In theme directory (source/images): /images/avatar.png
     # In site directory (source/uploads): /uploads/avatar.png
     # You can also use a link of image.
-    url: https://fastly.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202309201454997.png
+    url: https://gcore.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202309201454997.png
     # If true, the avatar would be displayed in a circle.
     rounded: true
     # Opacity of avatar (value: 0 ~ 1)
@@ -383,8 +383,8 @@ heading_line: true
 reward:
   enable: true
   # Your QR code for collecting money.
-  alipay: https://fastly.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202303221031585.png
-  wechat: https://fastly.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202303221031231.png
+  alipay: https://gcore.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202303221031585.png
+  wechat: https://gcore.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/202303221031231.png
 
 # ---------------------------------------------------------------
 # Post config
@@ -723,18 +723,18 @@ math:
   # Optional values: mathjax | katex
   engine: katex
   mathjax:
-    cdn: https://fastly.jsdelivr.net/npm/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+    cdn: https://gcore.jsdelivr.net/npm/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML
     # See: https://mhchem.github.io/MathJax-mhchem/
     mhchem:
       enable: false
-      mhchem_js: https://fastly.jsdelivr.net/npm/mathjax-mhchem@3.3.2/mhchem.min.js
+      mhchem_js: https://gcore.jsdelivr.net/npm/mathjax-mhchem@3.3.2/mhchem.min.js
   katex:
-    cdn: https://fastly.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css
+    cdn: https://gcore.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css
     # See: https://github.com/KaTeX/KaTeX/tree/master/contrib/copy-tex
     copy_tex:
       enable: true
-      copy_tex_js: https://fastly.jsdelivr.net/npm/katex@0.10.2/dist/contrib/copy-tex.min.js
-      copy_tex_css: https://fastly.jsdelivr.net/npm/katex@0.10.2/dist/contrib/copy-tex.css
+      copy_tex_js: https://gcore.jsdelivr.net/npm/katex@0.10.2/dist/contrib/copy-tex.min.js
+      copy_tex_css: https://gcore.jsdelivr.net/npm/katex@0.10.2/dist/contrib/copy-tex.css
 
 # ---------------------------------------------------------------
 # Other config
@@ -913,24 +913,24 @@ cdn:
   # Using version: 5.12.1
   # See: https://fontawesome.com/
   # Example:
-  # fontawesome: //fastly.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
-  # fontawesome: //fastly.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.12.1/css/all.min.css
+  # fontawesome: //gcore.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
+  # fontawesome: //gcore.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.12.1/css/all.min.css
   # fontawesome: //cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css
   # fontawesome: //cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css
   fontawesome:
 
   # Using version: 3.4.1
   # Example:
-  # jquery: //fastly.jsdelivr.net/npm/jquery@v3.4.1/dist/jquery.min.js
+  # jquery: //gcore.jsdelivr.net/npm/jquery@v3.4.1/dist/jquery.min.js
   # jquery: //cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js
   jquery:
 
   # Using version: 1.5.2
   # See: http://velocityjs.org/
   # Example:
-  # velocity: //fastly.jsdelivr.net/npm/velocity-animate@1.5.2/velocity.min.js
+  # velocity: //gcore.jsdelivr.net/npm/velocity-animate@1.5.2/velocity.min.js
   # velocity: //cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.min.js
-  # velocity_ui: //fastly.jsdelivr.net/npm/velocity-animate@1.5.2/velocity.ui.min.js
+  # velocity_ui: //gcore.jsdelivr.net/npm/velocity-animate@1.5.2/velocity.ui.min.js
   # velocity_ui: //cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.ui.min.js
   velocity:
   velocity_ui:
@@ -939,9 +939,9 @@ cdn:
   # Using version: latest & latest
   # See: https://github.com/gitalk/gitalk/, https://github.com/emn178/js-md5/
   # Example:
-  # gitalk_js: //fastly.jsdelivr.net/npm/gitalk@latest/dist/gitalk.min.js
-  # gitalk_css: //fastly.jsdelivr.net/npm/gitalk@latest/dist/gitalk.css
-  # md5: //fastly.jsdelivr.net/npm/js-md5@latest/src/md5.min.js
+  # gitalk_js: //gcore.jsdelivr.net/npm/gitalk@latest/dist/gitalk.min.js
+  # gitalk_css: //gcore.jsdelivr.net/npm/gitalk@latest/dist/gitalk.css
+  # md5: //gcore.jsdelivr.net/npm/js-md5@latest/src/md5.min.js
   gitalk_js:
   gitalk_css:
   gitalk_md5:
@@ -950,8 +950,8 @@ cdn:
   # Using version: latest & latest
   # See: https://github.com/xCss/Valine/, https://www.npmjs.com/package/leancloud-storage/
   # Example:
-  # valine: //fastly.jsdelivr.net/npm/valine@latest/dist/Valine.min.js
-  # leancloud_storage: //fastly.jsdelivr.net/npm/leancloud-storage@latest/dist/av-min.js
+  # valine: //gcore.jsdelivr.net/npm/valine@latest/dist/Valine.min.js
+  # leancloud_storage: //gcore.jsdelivr.net/npm/leancloud-storage@latest/dist/av-min.js
   valine:
   leancloud_storage:
 
@@ -964,72 +964,72 @@ cdn:
   # minivaline
   # See: https://github.com/MiniValine/MiniValine
   # Example:
-  # minivaline: //fastly.jsdelivr.net/npm/minivaline/dist/MiniValine.min.js
+  # minivaline: //gcore.jsdelivr.net/npm/minivaline/dist/MiniValine.min.js
   minivaline:
 
   # busuanzi
   # Using version: latest
   # See: https://busuanzi.ibruce.info/
   # Example:
-  # busuanzi: //fastly.jsdelivr.net/gh/sukkaw/busuanzi@latest/bsz.pure.mini.js
+  # busuanzi: //gcore.jsdelivr.net/gh/sukkaw/busuanzi@latest/bsz.pure.mini.js
   busuanzi:
 
   # Using version: 2.1.1
   # See: https://busuanzi.ibruce.info/
   # Example:
-  # instantsearch_js: //fastly.jsdelivr.net/npm/instantsearch.js@2.1.1/dist/instantsearch.min.js
-  # instantsearch_css: //fastly.jsdelivr.net/npm/instantsearch.js@2.1.1/dist/instantsearch.min.css
+  # instantsearch_js: //gcore.jsdelivr.net/npm/instantsearch.js@2.1.1/dist/instantsearch.min.js
+  # instantsearch_css: //gcore.jsdelivr.net/npm/instantsearch.js@2.1.1/dist/instantsearch.min.css
   instantsearch_js:
   instantsearch_css:
 
   # Using version: latest
   # See: https://github.com/hustcc/ribbon.js
   # Example:
-  # canvas_ribbon: //fastly.jsdelivr.net/npm/ribbon.js@latest/dist/ribbon.min.js
+  # canvas_ribbon: //gcore.jsdelivr.net/npm/ribbon.js@latest/dist/ribbon.min.js
   canvas_ribbon:
 
   # Using version: latest
   # See: https://github.com/hustcc/canvas-nest.js
   # Example:
-  # canvas_nest: //fastly.jsdelivr.net/npm/canvas-nest.js@1.0.1/dist/canvas-nest.min.js
+  # canvas_nest: //gcore.jsdelivr.net/npm/canvas-nest.js@1.0.1/dist/canvas-nest.min.js
   canvas_nest:
 
   # Using version: 3.5.7
   # See: https://www.fancyapps.com/fancybox/3/
   # Example:
-  # fancybox_js: //fastly.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js
-  # fancybox_css: //fastly.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css
+  # fancybox_js: //gcore.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js
+  # fancybox_css: //gcore.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css
   fancybox_js:
   fancybox_css:
 
   # Using version: 4.2.2
   # See: https://masonry.desandro.com/
   # Example:
-  # masonry: //fastly.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js
+  # masonry: //gcore.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js
   masonry:
 
   # Using version: 2.0.0-rc.2
   # See: https://github.com/tuupola/lazyload/
   # Example:
-  # lazyload: //fastly.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.min.js
+  # lazyload: //gcore.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.min.js
   lazyload:
 
   # Using version: latest
   # See: https://github.com/GoogleChromeLabs/quicklink/
   # Example:
-  # quicklink: //fastly.jsdelivr.net/npm/quicklink@latest/dist/quicklink.umd.js
+  # quicklink: //gcore.jsdelivr.net/npm/quicklink@latest/dist/quicklink.umd.js
   quicklink:
 
   # Using version: latest
   # See: https://github.com/MoOx/pjax/
   # Example:
-  # pjax: //fastly.jsdelivr.net/npm/pjax@latest/pjax.min.js
+  # pjax: //gcore.jsdelivr.net/npm/pjax@latest/pjax.min.js
   pjax:
 
   # Using version: 1.0.16
   # See: https://github.com/overtrue/share.js
   # Example:
-  # share_js: //fastly.jsdelivr.net/npm/social-share.js@1.0.16/dist/js/social-share.min.js
-  # share_css: //fastly.jsdelivr.net/npm/social-share.js@1.0.16/dist/css/share.min.css
+  # share_js: //gcore.jsdelivr.net/npm/social-share.js@1.0.16/dist/js/social-share.min.js
+  # share_css: //gcore.jsdelivr.net/npm/social-share.js@1.0.16/dist/css/share.min.css
   share_js:
   share_css:
